--- a/templates/blog/post/detail.html
+++ b/templates/blog/post/detail.html
@@ -7,6 +7,16 @@
     <p>
         <a href="{% url "blog:post_share" post.id %}">Share this post</a>
     </p>
+
+    {% if similar_posts.count != 0 %}
+        <h3>Similar posts:</h3>
+        {% for similar_post in similar_posts %}
+            <p>
+                <a href="{{ similar_post.get_absolute_url }}">{{ similar_post.title }}</a>
+            </p>
+        {% endfor %}
+    {% endif %}
+
     {% with comments.count as total_comments %}
         <h2>{{ total_comments }} comment{{ total_comments | pluralize }}</h2>
     {% endwith %}
