--- a/templates/blog/post/detail.html
+++ b/templates/blog/post/detail.html
@@ -25,7 +25,7 @@
     {% for comment in comments %}
         <div class="comment">
             <p class="info">
-                Comment {{ forloop.counter }} by {{ comment.name }}
+                Comment {{ forloop.counter }} by <b><i>{{ comment.name }}</i></b>
                 {{ comment.created }}
             </p>
             {{ comment.body|linebreaks }}
