--- a/templates/blog/base.html
+++ b/templates/blog/base.html
@@ -7,6 +7,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link href="{% static "css/blog.css" %}" rel="stylesheet">
     <title>{% block title %}{% endblock %}</title>
 </head>
@@ -15,10 +16,12 @@
         {% block content %}{% endblock %}
     </div>
     <div id="sidebar">
-        <h2>My blog</h2>
+        <h2><a href="{% url "blog:post_list" %}">My blog</a></h2>
         <p>This is my blog. I've written {% total_posts %} posts so far.</p>
 
         <p><a href="{% url "blog:post_feed" %}">Subscribe to my RSS feed</a></p>
+
+        <a href="{% url "blog:post_search" %}">Find a post</a>
 
         <h3>Latest posts:</h3>
         {% show_latest_posts 3 %}
